v11/fixtures/ast/errors/builtin_type_arity/source.able
fn bad_array(value: Array) -> void {
}
fn bad_map(value: Map i32) -> void {
}
fn bad_mutex(value: Mutex i32) -> void {
}
